--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -6,20 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nguyễn Vĩnh Hưng</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css" >
+    <link rel="stylesheet" href="/css/aboutme.css" >
 </head>
 <body>
     <div class="container-fluid">
         <section class="container">
             <div class="row">
-                <div class="col-header">
-                    <span id="text-header"></span>
+                <div class="col-top">
+                    <span id="text-top"></span>
                 </div>
             </div>
         </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="js/index.js"></script>
-    <script src="js/aboutme.js"></script>
+    <script src="/js/aboutme.js"></script>
 </body>
 </html>
