--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
         <div class="row-top">
             <div class="col-top">
               <div class="frame">
-                <a href="/html/aboutme.html" class="custom-btn btn-16 nav-link">iamhungOielts</a>
+                <a href="/html/aboutme.html" class="custom-btn btn-16 nav-link nav-sm">iamhungOielts</a>
                 <a class="custom-btn btn-16 nav-link disabled" href="/html/js.html" title="Đây là phần riêng tư">Javascript</a>
                 <li class="custom-btn btn-16 dropdown">
                   <a class="dropdown-toggle nav-link" data-bs-toggle="dropdown"  href="#">Button hover</a>
                   <ul class="dropdown-menu">
-                    <li><a class="custom-btn btn-16 dropdown-item nav-link"  href="/html/Button Animation.html">Button</a></li>
+                    <li><a class="custom-btn btn-16 dropdown-item"  href="/html/Button Animation.html">Button</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/cmt.html">Comment</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/software.html">Software</a></li>
+                    
                   </ul>
                 </li>
                 
