--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -10,10 +10,15 @@
 </head>
 <body>
     <div class="container-fluid">
-        <section class="container">
+        <section class="container text-center mt-5">
             <div class="row">
-                <div class="col-top">
-                    <span id="text-top"></span>
+                <h1>chưa có gì đâu nè !!!</h1>
+                <a href="/index.html" class="nav-link ">click go to back</a>
+                <div class="col-4">
+                    
+                </div>
+                <div class="col-8">
+                    
                 </div>
             </div>
         </section>
