--- a/html/software.html
+++ b/html/software.html
@@ -75,10 +75,13 @@
             text-align: center;
             background-image: url(/img/BG/ngỗng.png);
             background-size: cover;
+            width:100%;
+            height:100vh;
             background-repeat:no-repeat;
             background-position: 30%;
             background-attachment: fixed;
             margin-top: 7%;
+            position:fixed;
             
         }
     
