--- a/product/repoinsive.html
+++ b/product/repoinsive.html
@@ -7,8 +7,13 @@
     <title>Repoinsive_demo</title>
     <style>
         * {
-            margin:0px;
-            
+            margin:0;
+
+        }
+        .container {
+            display:flex;
+            background-color: rgb(29, 163, 240);
+            height:100vh;
         }
         .mobile,
         .tablet,
@@ -16,9 +21,8 @@
             color:white;
             font-size: 100px;
             display:none;
-            text-align: center;
-            background-color: rgb(0, 162, 255);
-            height:100vh;
+            margin:auto;
+            
         }
         /* Mobile <= 740px */
         @media screen and (max-width:739px) {
@@ -44,8 +48,10 @@
     </style>
 </head>
 <body>
-    <h1 class="mobile">Mobile</h1>
-    <h1 class="tablet">Tablet</h1>
-    <h1 class="pc">PC</h1>
+    <div class="container">
+        <h1 class="mobile">Mobile</h1>
+        <h1 class="tablet">Tablet</h1>
+        <h1 class="pc">PC</h1>
+    </div>
 </body>
 </html>
