--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                   <ul class="dropdown-menu">
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/Button Animation.html">Button</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/product/repoinsive.html">Repoinsive</a></li>
-                    <li><a class="custom-btn btn-16 dropdown-item"  href="/html/software.html">Software</a></li>
+                    <li><a class="custom-btn btn-16 dropdown-item disabled"  href="/html/software.html">Software</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item disabled" href="/html/js.html" title="Đây là phần riêng tư">Javascript</a></li>
-                    
                   </ul>
                 </li>
-                
+                <a class="custom-btn btn-16 nav-link nav-item"  href="/php/dangky.php">Đăng Ký</a>
+                <a class="custom-btn btn-16 nav-link nav-item"  href="/php/dangnhap.php">Đăng Nhập</a>
               </div>
                 <!-- <ul class="nav nav-tabs">
                     <li class="nav-item">
