--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
                   
                 </a>
                 
-                <a class="custom-btn btn-16 nav-link nav-item"  href="/html/software.html">Software</a>
+                <a class="custom-btn btn-16 nav-link nav-item"  href="/product/animation_pepsi.html">Animation</a>
                 <li class="custom-btn btn-16 dropdown">
                   <a class=" dropdown-toggle nav-link nav-item" data-bs-toggle="dropdown"  href="#">Product</a>
                   <ul class="dropdown-menu">
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/Button Animation.html">Button</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/product/repoinsive.html">Repoinsive</a></li>
-                    <li><a class="custom-btn btn-16 dropdown-item disabled"  href="/html/software.html">Software</a></li>
+                    <li><a class="custom-btn btn-16 dropdown-item"  href="/html/software.html">Software</a></li>
+                    <li><a class="custom-btn btn-16 dropdown-item"  href="/product/necessary.html">Thứ gì đó rất hay ho</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item disabled" href="/html/js.html" title="Đây là phần riêng tư">Javascript</a></li>
                   </ul>
                 </li>
