--- a/product/repoinsive.html
+++ b/product/repoinsive.html
@@ -14,10 +14,12 @@
             display:flex;
             background-color: rgb(29, 163, 240);
             height:100vh;
+            width:100%;
         }
         .mobile,
         .tablet,
         .pc {
+            
             color:white;
             font-size: 100px;
             display:none;
