--- a/product/animation_pepsi.html
+++ b/product/animation_pepsi.html
@@ -144,7 +144,7 @@ body {
             <p></p>
             <a href="https://www.pepsi.com/">Buy Now</a>
         </div>
-        <img src="/can-pepsi.png">
+        <img src="/img/can-pepsi.png">
     </div>
 </body>
 </html>
