--- a/product/necessary.html
+++ b/product/necessary.html
@@ -7,6 +7,7 @@
     <title>Tổng hợp link nhiều thứ hay ho</title>
 </head>
 <body>
+    <h2 style="text-align:center">Tổng hợp link </h2>
     <a href="https://www.youtube.com/watch?v=U-ePoM4EDXA&ab_channel=OnlineTutorials">Animation</a>
 </body>
 </html>
