--- a/product/animation_pepsi.html
+++ b/product/animation_pepsi.html
@@ -12,6 +12,8 @@
     padding:0;
     box-sizing: border-box;
     font-family:Verdana, Geneva, Tahoma, sans-serif,sans-serif;
+    user-select: none;
+    -webkit-user-select: none;
 }
 body {
     display:flex;
@@ -122,7 +124,7 @@ body {
     }
     .card {
         text-align: center;
-        marign:20px;
+        margin:20px;
     }
     .card:hover img {
         top:65%;
