--- a/product/animation_pepsi.html
+++ b/product/animation_pepsi.html
@@ -144,7 +144,7 @@ body {
             <p>This is first Animation i created...,Ờ mây Zing...Gút Chóp, Đã Quá Pepsi ơi !!!</p>
             <p></p>
             <p></p>
-            <a href="https://www.pepsi.com/">Buy Now</a>
+            <a href="/product/animation_pepsi.html">Buy Now</a>
         </div>
         <img src="/img/can-pepsi.png">
     </div>
