--- a/html/cmt.html
+++ b/html/cmt.html
@@ -13,7 +13,7 @@
         .container-fluid{
             align-content: center;
             background-size: 100%;
-            background-image: url(/img/bgstory.jpeg );
+            background-image: url(/img/img_index/bgstory.jpeg );
             background-repeat: no-repeat;
             color:rgb(239, 245, 250);
             
