--- a/html/software.html
+++ b/html/software.html
@@ -7,7 +7,7 @@
     <title>iamhung_software</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">    
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/buttn.css">
+    <link rel="stylesheet" href="/css/button.css">
     <style>
      
     .frame {
@@ -73,7 +73,7 @@
     body{
             
             text-align: center;
-            background-image: url(/img/BG/ngỗng.png);
+            background-image: url(/img/img_index/ngỗng.png);
             background-size: cover;
             width:100%;
             height:100vh;
