--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/repoinsive.html">Repoinsive</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/Button Animation.html">Button</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/software.html">Software</a></li>
-                    <!-- <li><a class="custom-btn btn-16 dropdown-item disabled"  href="/html/necessary.html">Thứ gì đó rất hay ho</a></li>
-                    <li><a class="custom-btn btn-16 dropdown-item disabled" href="/html/js.html" title="Đây là phần riêng tư">Javascript</a></li> -->
+                    <!-- <li><a class="custom-btn btn-16 dropdown-item disabled" href="/html/js.html" title="Đây là phần riêng tư">Javascript</a></li>  -->
                   </ul>
                 </li>
                 
