--- a/html/starbucks_home.html
+++ b/html/starbucks_home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Starbucks_Repoinsive_Animation</title>
+    <title>Starbucks_Home</title>
     <link rel="stylesheet" href="/css/starbucks.css">
 </head>
 <body>
