--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                   <ul class="dropdown-menu">
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/starbucks_home.html">Starbucks_Home</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/animation_pepsi.html">Animation</a></li>
+                    <li><a class="custom-btn btn-16 dropdown-item"  href="/html/product_shoes.html">Shoes</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/repoinsive.html">Repoinsive</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/Button Animation.html">Button</a></li>
                     <li><a class="custom-btn btn-16 dropdown-item"  href="/html/software.html">Software</a></li>
