--- a/html/pepsi_home.html
+++ b/html/pepsi_home.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starbucks_Home</title>
-    <link rel="stylesheet" href="/css/starbucks.css">
+    <link rel="stylesheet" href="/css/pepsi.css">
 </head>
 <body>
     <section>
         <div class="circle"></div>
         <header>
-            <a href="#"><img src="/img/img_starbucks/logo_Starbucks.png" class="logo"></a>
+            <a href="#"><img src="/img/img_pepsi/logo.png" class="logo"></a>
             <div class="toggle" onclick="toggleMenu();"></div>
             <ul class="navigation">
                 <li><a href="#">Home</a></li>
@@ -31,23 +31,23 @@
                 <a href="#">Learn More</a>
             </div>
             <div class="imgBox">
-                <img src="/img/img_starbucks/Starbucks_1.png" class="starbucks">
+                <img src="/img/img_pepsi/pepsi001.png" class="pepsi">
             </div>
         </div>
         <ul class="thumb">
-            <li><img src="/img/img_starbucks/thumb1.png" onclick="imgSlider('/img/img_starbucks/Starbucks_1.png');changeCircleColor('#017143')"></li>
-            <li><img src="/img/img_starbucks/thumb2.png" onclick="imgSlider('/img/img_starbucks/Starbucks_2.png');changeCircleColor('#eb7495')"></li>
-            <li><img src="/img/img_starbucks/thumb3.png" onclick="imgSlider('/img/img_starbucks/Starbucks_3.png');changeCircleColor('#d752b1')"></li>
+            <li><img src="/img/img_pepsi/pepsi001.png" onclick="imgSlider('/img/img_pepsi/pepsi001.png');changeCircleColor('#017143')"></li>
+            <li><img src="/img/img_pepsi/pepsi002.png" onclick="imgSlider('/img/img_pepsi/pepsi002.png');changeCircleColor('#eb7495')"></li>
+            <li><img src="/img/img_pepsi/pepsi003.png" onclick="imgSlider('/img/img_pepsi/pepsi003.png');changeCircleColor('#d752b1')"></li>
         </ul>
         <ul class="sci">
-            <li><a href="#"><img src="/img/img_starbucks/facebook (1).png"></a></li>
-            <li><a href="#"><img src="/img/img_starbucks/twitter.png"></a></li>
-            <li><a href="#"><img src="/img/img_starbucks/instagram (1).png"></a></li>
+            <li><a href="#"><img src="/img/img_pepsi/facebook.png"></a></li>
+            <li><a href="#"><img src="/img/img_pepsi/twitter.png"></a></li>
+            <li><a href="#"><img src="/img/img_pepsi/instagram.png"></a></li>
         </ul>
     </section>
     <script type="text/javascript">
         function imgSlider(anything){
-            document.querySelector('.starbucks').src=anything;
+            document.querySelector('.pepsi').src=anything;
         }
 
         function changeCircleColor(color){
