--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="/css/repoinsive.css">
 </head>
 <body>
-    <div class="container-fluid">
+  <div class="container-fluid">
+
       <section class="container">
         <div class="row-top">
             <div class="col-top">
@@ -20,6 +21,9 @@
                   <span class="iamhungOielts">iamhung<span class="spinner-border text-info sniper_top iamhungOielts"></span>ielts</span>
                 </a>
                 <a class="custom-btn btn-16 nav-link nav-item"  href="/html/test.html">Test</a>
+                <!-- <a class="custom-btn btn-16 nav-link nav-item"  href="/html/login.html">Đăng Nhập</a>
+                <a class="custom-btn btn-16 nav-link nav-item"  href="/html/signup.html">Đăng Ký</a> -->
+
                 <li class="custom-btn btn-16 dropdown">
                   <a class=" dropdown-toggle nav-link nav-item" data-bs-toggle="dropdown"  href="#">Product</a>
                   <ul class="dropdown-menu">
