--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <li class=""><a href="/html/accessories.html">Accessories</a></li>
                     <li class=""><a href="/html/Allproducts.html">All Products</a></li>
                     <li class=""><a href="/html/contact.html">Contact</a></li>
-                    <li class=""><a href="/html/productDetails.html">Products Details</a></li>
+                    <!-- <li class=""><a href="/html/productDetails.html">Products Details</a></li> -->
                 </ul>
                 </div>
                 <div class="col-2">
